# you_r_machine_leaderboard

./: Dockerfile  README.md  main.py  pyproject.toml
api_v1/scores/: crud.py  dependencies.py  views.py
